--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,13 @@
 </head>
 <body>
 
+<nav>
+  <ul>
+    <li><%= link_to "Sign up", new_user_path %></li>
+    <li><%= link_to "Sign in", signin_path %></li>
+  </ul>
+</nav>
+
 <% flash.each do |key,value| %>
 	<div class='flash' id='<%= key %>'>
 		<%= value %>
