--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,10 @@
 <head>
   <title>
   	<%if content_for?(:title) %>
-  		<%= yield(:title) %>
-  	<% else %>
-  		Ticketee
-  	<% end %>
+    <%= yield(:title) %>
+    <% else %>
+    Ticketee
+    <% end %>
   </title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -14,20 +14,27 @@
 </head>
 <body>
 
-<nav>
-  <ul>
-    <li><%= link_to "Sign up", new_user_path %></li>
-    <li><%= link_to "Sign in", signin_path %></li>
-  </ul>
-</nav>
+  <nav>
+    <% if current_user %>
+    Signed in as <%= current_user.email %>
+    <% admins_only do %>
+    <%= link_to "Admin", admin_root_path %>
+    <% end %>
+    <% else %>
+    <ul>
+      <li><%= link_to "Sign up", new_user_path %></li>
+      <li><%= link_to "Sign in", signin_path %></li>
+    </ul>
+    <%end%>
+  </nav>
 
-<% flash.each do |key,value| %>
-	<div class='flash' id='<%= key %>'>
-		<%= value %>
-	</div>
-<% end %>
+  <% flash.each do |key,value| %>
+  <div class='flash' id='<%= key %>'>
+    <%= value %>
+  </div>
+  <% end %>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
